syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "WidgetGadgetData.proto";

message WidgetGadgetDataNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 4256;
	}

	WidgetGadgetData widget_gadget_data = 1;
}
